added facility filter feature

--- a/components/List/List.module.css
+++ b/components/List/List.module.css
@@ -5,9 +5,9 @@
 
 @keyframes fade {
   0% {
-    background-color: #bbbbbb;
+    background-color: #aaaaaa;
   }
   100% {
-    background-color: #cccccc;
+    background-color: #dddddd;
   }
 }
